index.css
* {
  box-sizing: border-box;
  font-family: "Palanquin";
  margin: 0;
  text-align: center;
  color: #020100;
}
.project {
  flex-grow: 1;
}
.header {
  background-color: #235789;
  padding: 30px 10px;
}
h1 {
  margin: 0;
}
.contact {
  position: absolute;
  top: 0;
  left: 50%;
  width: 350px;
  margin-left: -175px;
}
h1,
.contact > * {
  color: #fdfffc;
}

.contact > * {
  display: inline;
  margin: 0 5px 0 5px;
}
.projects-header {
  flex: 0 0 100%;
}
body {
  background-color: #e6e5e5;
}
#projects {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  margin: 50px 10px 0 10px;
  padding: 0 10px 0 10px;
}
.project > p {
  max-width: 500px;
  margin: auto;
}
#bio {
  display: flex;
  flex-direction: column;
}
img {
  display: block;
  margin: 15px auto;
  width: 200px;
  max-width: 450px;
}
.bio-section {
  flex: 1;
  margin: 10px auto;
  max-width: 500px;
}

p {
  line-height: 1.6;
}

.project {
  margin: 10px;
  width: 50%;
  flex: 1 1 0px;
}

#bio,
.project {
  padding: 20px;
}

h2,
h3 {
  color: #235789;
}

a:hover {
  color: #235789;
}

@media only screen and (min-width: 550px) {
  img {
    width: auto;
  }
}

